[develop] -> Finished bad makefile

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,6 +52,14 @@ set(PROJECT_SOURCES
         QtGifImage-master/src/gifimage/qgifimage.cpp
         )
 
+set(CPACK_SOURCE_GENERATOR "TGZ")
+add_custom_target(dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source)
+set(CPACK_SOURCE_IGNORE_FILES
+        ./CMakeFiles
+        ./3DViewer_v1.app
+        ./_CPack_Packages
+        )
+
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(3DViewer_v1
         MANUAL_FINALIZATION
@@ -101,3 +109,5 @@ install(TARGETS 3DViewer_v1
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(3DViewer_v1)
 endif()
+
+include(CPack)
